--- a/BungeeAnnounce/plugin.yml
+++ b/BungeeAnnounce/plugin.yml
@@ -1,8 +1,14 @@
 main: fr.roytreo.bungeeannounce.BungeeAnnouncePlugin
 name: BungeeAnnounce
-version: 5.1
+version: 5.2
 author: Asynchronous
 commands:
+  forcebroadcast:
+    description: Force broadcast of an announcement
+    permission: bungeecord.command.forcebroadcast
+  "ba:reload":
+    description: "Reload bungee announce's configuration"
+    permission: bungeecord.command.reload
   announce:
     description: Send an announcement through all your network.
     permission: bungeecord.command.announce
