--- a/BungeeAnnounce/config.yml
+++ b/BungeeAnnounce/config.yml
@@ -1,4 +1,4 @@
-#===============# BungeeAnnounce Configuration file v5.3 #===============#
+#===============# BungeeAnnounce Configuration file #===============#
 #
 #Prefixes for all types of announcement (color codes supported!)
 announce-prefix: ''
