--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -81,11 +81,11 @@ scheduler:
 #
 #Note: Use '[ln]' to go to the next line (works only for announce/warn).
 #A lot of placeholders are available to be used:
-#You can get them at https://github.com/Roytreo28/BungeeAnnounce/wiki/Placeholders
+#You can get them at https://github.com/Royalphax/BungeeAnnounce/wiki/Placeholders
 #
-#You can see 2 examples below (Player Roytreo28 and Droleur)
-#In the Droleur's example, the field 'permission' says that all 
-#players with that permission and Droleur will have the following action message on join.
+#You can see 2 examples below (Player Royalpha and IsiZ_)
+#In the IsiZ_'s example, the field 'permission' says that all
+#players with that permission and IsiZ_ will have the following action message on join.
 #
 #You can delete/edit/copy&paste them.
 #Player announcer on join section :
